# dbt_dashboard

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/db/: schema.sql
backend/db/migrations/: 20241218020200_project.sql  20241218020455_environment.sql  20241218021053_job.sql  20241218021428_run.sql
backend/src/: config.py  handlers.py  routes.py
backend/src/db/: connection.py  models.py  queries.py
backend/src/dbt/: api.py  response_types.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: style.css
frontend/src/: App.tsx  JobCard.tsx  NavBar.tsx
